还是没解决

--- a/report/包管理报告.html
+++ b/report/包管理报告.html
@@ -11,14 +11,14 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link href="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/css/report.css" rel="stylesheet">
+    <link href="C:/virtualenv/airtest/lib/site-packages/airtest/report/css/report.css" rel="stylesheet">
 
-    <script src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/js/jquery-1.10.2.min.js"></script>
-    <script src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/js/jquery-lang.js" charset="utf-8" type="text/javascript"></script>
-    <script src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/js/langpack/zh_CN.js" charset="utf-8" type="text/javascript"></script>
-    <script src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/js/lazyload.js" charset="utf-8" type="text/javascript"></script>
+    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/jquery-1.10.2.min.js"></script>
+    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/jquery-lang.js" charset="utf-8" type="text/javascript"></script>
+    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/langpack/zh_CN.js" charset="utf-8" type="text/javascript"></script>
+    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/lazyload.js" charset="utf-8" type="text/javascript"></script>
     <script type="text/javascript">
-      data = {"steps": [], "name": "D:\\android_airtest\\case\\apk_manage", "scale": 0.5, "test_result": true, "run_end": null, "run_start": null, "static_root": "D:/virtual_airtest/airtest/lib/site-packages/airtest/report/", "lang": "en", "records": [], "info": {"name": "test_apk.py", "path": "D:\\android_airtest\\case\\apk_manage\\test_apk.py", "author": "zijie", "title": "\u5305\u7ba1\u7406\u6d4b\u8bd5\u62a5\u544a", "desc": ""}, "log": "..\\log\\apk_manage\\log.txt", "console": ""}
+      data = {"steps": [], "name": "C:\\airtest_script\\case\\apk_manage", "scale": 0.5, "test_result": true, "run_end": null, "run_start": null, "static_root": "C:/virtualenv/airtest/lib/site-packages/airtest/report/", "lang": "en", "records": [], "info": {"name": "test_apk.py", "path": "C:\\airtest_script\\case\\apk_manage\\test_apk.py", "author": "zijie", "title": "\u5305\u7ba1\u7406\u6d4b\u8bd5\u62a5\u544a", "desc": ""}, "log": "..\\log\\apk_manage\\log.txt", "console": ""}
       lang = new Lang();
       lang.init({
         defaultLang: 'en',
@@ -67,7 +67,7 @@
                     <div class="info-log">
                       <span class="info-name" lang="en">Log: </span>
                       <span class="info-value log">
-                        <a href="..\log\apk_manage\log.txt" target="_blank" download="log.txt">log.txt <img src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/download_log.svg" /></a>
+                        <a href="..\log\apk_manage\log.txt" target="_blank" download="log.txt">log.txt <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/download_log.svg" /></a>
                       </span>
                     </div>
                     
@@ -88,8 +88,8 @@
                     </div>
                     <div class="info-execute">
                       <div class="circle-img"></div>
-                      <div class="info-file" title="D:\android_airtest\case\apk_manage\test_apk.py">test_apk.py
-                        <img id="copy_path" path="D:\android_airtest\case\apk_manage\test_apk.py" title="copy file path to clipboard" src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/copy.svg" />
+                      <div class="info-file" title="C:\airtest_script\case\apk_manage\test_apk.py">test_apk.py
+                        <img id="copy_path" path="C:\airtest_script\case\apk_manage\test_apk.py" title="copy file path to clipboard" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/copy.svg" />
                       </div>
                     </div>
                   </div>
@@ -120,26 +120,26 @@
           <div class="foo">
             <div class="interfaces">
               <a class="icon" href="https://github.com/AirtestProject/Airtest"  target="_blank">
-                <img src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/Airtest.png" alt="airtest">
+                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/Airtest.png" alt="airtest">
               </a>
               <a class="icon" href="https://github.com/AirtestProject/poco"  target="_blank">
-                <img src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/poco.png" alt="Poco">
+                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/poco.png" alt="Poco">
               </a>
             </div>
           </div>
           <div class="foo">
             <div class="apps">
               <a class="icon ide" href="http://airtest.netease.com/"  target="_blank">
-                <img src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/AirtestIDE.png" alt="AirtestIDE">
+                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/AirtestIDE.png" alt="AirtestIDE">
               </a>
               <a class="icon" href="https://airlab.163.com/"  target="_blank">
-                <img src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/AirLab.png" alt="AirLab">
+                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/AirLab.png" alt="AirLab">
               </a>
             </div>
           </div>
           <div class="foo">
             <div class="corp">
-                <img src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/netease.png" alt="NetEase">
+                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/netease.png" alt="NetEase">
                 <span lang="en">© 1997 - 2019 NetEase, Inc. All Rights Reserved.</span>
             </div>
           </div>
@@ -152,15 +152,15 @@
           <div class="menu">
             <div class="pattern pattern1">
               <div class="minimize">
-                <img title="minimize" src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/minimize.svg" />
+                <img title="minimize" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/minimize.svg" />
               </div>
               <div class="close">
-                <img title="close" src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/close.svg" />
+                <img title="close" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/close.svg" />
               </div>
             </div>
             <div class="pattern pattern2">
               <div class="maximize">
-                <img title="maximize" src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/image/maximize.svg" />
+                <img title="maximize" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/maximize.svg" />
               </div>
             </div>
           </div>
@@ -175,9 +175,9 @@
       </div>
     </div>
 
-  <link href="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/css/monokai_sublime.min.css" rel="stylesheet">
-  <script src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/js/highlight.min.js"></script>
-  <script type="text/javascript" src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/js/paging.js"></script>
-  <script src="D:/virtual_airtest/airtest/lib/site-packages/airtest/report/js/report.js"></script>
+  <link href="C:/virtualenv/airtest/lib/site-packages/airtest/report/css/monokai_sublime.min.css" rel="stylesheet">
+  <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/highlight.min.js"></script>
+  <script type="text/javascript" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/paging.js"></script>
+  <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/report.js"></script>
 </body>
 </html>
