--- a/report/包管理报告.html
+++ b/report/包管理报告.html
@@ -11,14 +11,14 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link href="C:/virtualenv/airtest/lib/site-packages/airtest/report/css/report.css" rel="stylesheet">
+    <link href="c:/virtualenv/airtest/lib/site-packages/airtest/report/css/report.css" rel="stylesheet">
 
-    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/jquery-1.10.2.min.js"></script>
-    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/jquery-lang.js" charset="utf-8" type="text/javascript"></script>
-    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/langpack/zh_CN.js" charset="utf-8" type="text/javascript"></script>
-    <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/lazyload.js" charset="utf-8" type="text/javascript"></script>
+    <script src="c:/virtualenv/airtest/lib/site-packages/airtest/report/js/jquery-1.10.2.min.js"></script>
+    <script src="c:/virtualenv/airtest/lib/site-packages/airtest/report/js/jquery-lang.js" charset="utf-8" type="text/javascript"></script>
+    <script src="c:/virtualenv/airtest/lib/site-packages/airtest/report/js/langpack/zh_CN.js" charset="utf-8" type="text/javascript"></script>
+    <script src="c:/virtualenv/airtest/lib/site-packages/airtest/report/js/lazyload.js" charset="utf-8" type="text/javascript"></script>
     <script type="text/javascript">
-      data = {"steps": [{"title": "shell", "time": 1605861247.744318, "code": {"name": "shell", "args": [{"key": "cmd", "value": "input keyevent 224"}]}, "screen": {"src": null, "rect": [], "pos": [], "vector": [], "confidence": null}, "desc": null, "traceback": null, "assert": null}, {"title": "Swipe", "time": 1605861252.822123, "code": {"name": "swipe", "args": [{"key": "v1", "value": [500, 1500]}, {"key": "v2", "value": [500, 500]}, {"key": "kwargs", "value": {"duration": 0.1}}, {"key": "vector", "value": null}]}, "screen": {"src": "C:\\airtest_script\\log\\apk_manage\\1605861250643.jpg", "rect": [], "pos": [[500, 1500]], "vector": [[0, -1000]], "confidence": null, "resolution": [1080, 2340], "_filepath": "C:\\airtest_script\\log\\apk_manage\\1605861250643.jpg", "thumbnail": "C:\\airtest_script\\log\\apk_manage\\1605861250643_small.jpg"}, "desc": "Swipe on screen", "traceback": null, "assert": null}, {"title": "Sleep", "time": 1605861254.8307674, "code": {"name": "sleep", "args": [{"key": "secs", "value": 2}]}, "screen": {"src": null, "rect": [], "pos": [], "vector": [], "confidence": null}, "desc": "Wait for 2 seconds", "traceback": null, "assert": null}], "name": "C:\\airtest_script\\case\\apk_manage", "scale": 0.5, "test_result": true, "run_end": 1605861254.8307674, "run_start": 1605861247.209752, "static_root": "C:/virtualenv/airtest/lib/site-packages/airtest/report/", "lang": "en", "records": [], "info": {"name": "test_apk.py", "path": "C:\\airtest_script\\case\\apk_manage\\test_apk.py", "author": "zijie", "title": "\u5305\u7ba1\u7406\u6d4b\u8bd5\u62a5\u544a", "desc": ""}, "log": "..\\log\\apk_manage\\log.txt", "console": ""}
+      data = {"steps": [{"title": "shell", "time": 1605863860.2021053, "code": {"name": "shell", "args": [{"key": "cmd", "value": "input keyevent 224"}]}, "screen": {"src": null, "rect": [], "pos": [], "vector": [], "confidence": null}, "desc": null, "traceback": null, "assert": null}, {"title": "Swipe", "time": 1605863865.1743364, "code": {"name": "swipe", "args": [{"key": "v1", "value": [500, 1500]}, {"key": "v2", "value": [500, 500]}, {"key": "kwargs", "value": {"duration": 0.1}}, {"key": "vector", "value": null}]}, "screen": {"src": "C:\\airtest_script\\log\\apk_manage\\1605863862990.jpg", "rect": [], "pos": [[500, 1500]], "vector": [[0, -1000]], "confidence": null, "resolution": [1080, 2340], "_filepath": "C:\\airtest_script\\log\\apk_manage\\1605863862990.jpg", "thumbnail": "C:\\airtest_script\\log\\apk_manage\\1605863862990_small.jpg"}, "desc": "Swipe on screen", "traceback": null, "assert": null}, {"title": "Sleep", "time": 1605863867.2061622, "code": {"name": "sleep", "args": [{"key": "secs", "value": 2}]}, "screen": {"src": null, "rect": [], "pos": [], "vector": [], "confidence": null}, "desc": "Wait for 2 seconds", "traceback": null, "assert": null}], "name": "C:\\airtest_script\\case\\apk_manage", "scale": 0.5, "test_result": true, "run_end": 1605863867.2061622, "run_start": 1605863859.6926632, "static_root": "c:/virtualenv/airtest/lib/site-packages/airtest/report/", "lang": "en", "records": [], "info": {"name": "test_apk.py", "path": "C:\\airtest_script\\case\\apk_manage\\test_apk.py", "author": "zijie", "title": "\u5305\u7ba1\u7406\u6d4b\u8bd5\u62a5\u544a", "desc": ""}, "log": "..\\log\\apk_manage\\log.txt", "console": ""}
       lang = new Lang();
       lang.init({
         defaultLang: 'en',
@@ -65,7 +65,7 @@
                     <div class="info-log">
                       <span class="info-name" lang="en">Log: </span>
                       <span class="info-value log">
-                        <a href="..\log\apk_manage\log.txt" target="_blank" download="log.txt">log.txt <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/download_log.svg" /></a>
+                        <a href="..\log\apk_manage\log.txt" target="_blank" download="log.txt">log.txt <img src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/download_log.svg" /></a>
                       </span>
                     </div>
                     
@@ -87,7 +87,7 @@
                     <div class="info-execute">
                       <div class="circle-img"></div>
                       <div class="info-file" title="C:\airtest_script\case\apk_manage\test_apk.py">test_apk.py
-                        <img id="copy_path" path="C:\airtest_script\case\apk_manage\test_apk.py" title="copy file path to clipboard" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/copy.svg" />
+                        <img id="copy_path" path="C:\airtest_script\case\apk_manage\test_apk.py" title="copy file path to clipboard" src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/copy.svg" />
                       </div>
                     </div>
                   </div>
@@ -147,26 +147,26 @@
           <div class="foo">
             <div class="interfaces">
               <a class="icon" href="https://github.com/AirtestProject/Airtest"  target="_blank">
-                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/Airtest.png" alt="airtest">
+                <img src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/Airtest.png" alt="airtest">
               </a>
               <a class="icon" href="https://github.com/AirtestProject/poco"  target="_blank">
-                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/poco.png" alt="Poco">
+                <img src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/poco.png" alt="Poco">
               </a>
             </div>
           </div>
           <div class="foo">
             <div class="apps">
               <a class="icon ide" href="http://airtest.netease.com/"  target="_blank">
-                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/AirtestIDE.png" alt="AirtestIDE">
+                <img src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/AirtestIDE.png" alt="AirtestIDE">
               </a>
               <a class="icon" href="https://airlab.163.com/"  target="_blank">
-                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/AirLab.png" alt="AirLab">
+                <img src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/AirLab.png" alt="AirLab">
               </a>
             </div>
           </div>
           <div class="foo">
             <div class="corp">
-                <img src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/netease.png" alt="NetEase">
+                <img src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/netease.png" alt="NetEase">
                 <span lang="en">© 1997 - 2019 NetEase, Inc. All Rights Reserved.</span>
             </div>
           </div>
@@ -179,15 +179,15 @@
           <div class="menu">
             <div class="pattern pattern1">
               <div class="minimize">
-                <img title="minimize" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/minimize.svg" />
+                <img title="minimize" src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/minimize.svg" />
               </div>
               <div class="close">
-                <img title="close" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/close.svg" />
+                <img title="close" src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/close.svg" />
               </div>
             </div>
             <div class="pattern pattern2">
               <div class="maximize">
-                <img title="maximize" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/image/maximize.svg" />
+                <img title="maximize" src="c:/virtualenv/airtest/lib/site-packages/airtest/report/image/maximize.svg" />
               </div>
             </div>
           </div>
@@ -202,9 +202,9 @@
       </div>
     </div>
 
-  <link href="C:/virtualenv/airtest/lib/site-packages/airtest/report/css/monokai_sublime.min.css" rel="stylesheet">
-  <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/highlight.min.js"></script>
-  <script type="text/javascript" src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/paging.js"></script>
-  <script src="C:/virtualenv/airtest/lib/site-packages/airtest/report/js/report.js"></script>
+  <link href="c:/virtualenv/airtest/lib/site-packages/airtest/report/css/monokai_sublime.min.css" rel="stylesheet">
+  <script src="c:/virtualenv/airtest/lib/site-packages/airtest/report/js/highlight.min.js"></script>
+  <script type="text/javascript" src="c:/virtualenv/airtest/lib/site-packages/airtest/report/js/paging.js"></script>
+  <script src="c:/virtualenv/airtest/lib/site-packages/airtest/report/js/report.js"></script>
 </body>
 </html>
